--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="keywords" content=" Lawn, lawn mowing, grass, grass cutting, mowing, services, lawn mowing services,">
+    <meta name="keywords" content=" Lawn, lawn mowing, grass, grass cutting, mowing, services, lawn mowing services, Landscaping">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -21,7 +21,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="grass favicon.ico">
-    <title>Frontend Bootcamp</title>
+    <title>Enrique's Landscaping</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -101,18 +101,6 @@
                   you can call and text us at
                 </p>
                 <button type="button" class="btn btn-primary" onclick="myFunction()">(xxx)-xxx-xxxx</button>
-                
-
-
-
-
-
-
-
-
-
-
-                
               </div>
             </div>
           </div>
